[project]
name = "hmpps-health-ping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hmpps-python-lib",
    "psutil>=7.0.0",
    "redis==4.6.0",
]

[tool.uv.sources]
hmpps-python-lib = { git = "https://github.com/ministryofjustice/hmpps-python-lib.git", rev = "patch/check_ping" }
